K8s/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: simple-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: guutar/simple-bank-website:latest
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
          ports:
            - containerPort: 8080
      volumes:
        - name: nginx-cache
          emptyDir: {}
