K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: simple-bank
spec:
  selector:
    app: backend
  ports:
    - port: 8080
