K8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: simple-bank
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
