K8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: simple-bank
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
