K8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: simple-bank
spec:
  selector:
    app: website
  ports:
    - name: http
      port: 80
      targetPort: 8080
