K8s/rabbitmq-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rabbitmq
  namespace: simple-bank
spec:
  to:
    kind: Service
    name: rabbitmq
  port:
    targetPort: http
