K8s/website-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: website
  namespace: simple-bank
spec:
  to:
    kind: Service
    name: website
